--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.benbird.bencenter.mapper
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus\u914D\u7F6E\u63A7\u5236\u53F0\u6253\u5370\u5B8C\u6574\u5E26\u53C2\u6570SQL\u8BED\u53E5
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # log \u5F00\u542Flog\u6CE8\u91CA\u9700\u5C06static\u76EE\u5F55\u6587\u4EF6\u5939\u4E0B\u7684logback-spring.xml \u79FB\u5230resource\u6587\u4EF6\u4E0B
 #logging.config=classpath:logback-spring.xml
 
